--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -6,12 +7,65 @@
   text-decoration: none;
   font-family: "Roboto Mono", sans-serif;
 }
+.max-width {
+  max-width: 1300px;
+  padding: 0 80px;
+  margin: auto;
+}
 /* navbar */
 .navbar {
   position: fixed;
+  padding: 15px 0;
   width: 100%;
-  background: red;
+  background: navy;
+}
+.navbar .max-width {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar .logo a {
+  color: white;
+  font-size: 35px;
+  font-family: "Righteous", sans-serif;
+}
+.navbar .menu li {
+  list-style: none;
+  display: inline-block;
 }
 .navbar .menu li a {
   color: white;
+  font-size: 18px;
+  font-weight: 500;
+  margin-left: 25px;
+}
+/* home section styling */
+.home {
+  display: flex;
+  background: url("resources/background.jpg") no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position-y: 60px;
+  height: 100vh;
+  min-height: 500px;
+  color: white;
+}
+.home .max-width {
+  margin: auto 0 auto 40px;
+}
+.home .home-content .text-1 {
+  font-size: 27px;
+}
+.home .home-content .text-2 {
+  font-size: 75px;
+  font-weight: 600;
+  margin-left: -3px;
+}
+.home .home-content .text-3 {
+  font-size: 40px;
+  margin: 5px 0;
+}
+.home .home-content .text-3 span {
+  color: red;
+  font-weight: 500;
 }
